server/src/editing/threading/snapshots/janet_zed_server__editing__threading__tests__thread_first_nested_calls.snap
---
source: server/src/editing/threading/tests.rs
expression: "|(f (g (h x) a) b)"
---
----- BEFORE ACTION
(f (g (h x) a) b)
↑

----- AFTER ACTION: Thread first (->)
(-> x h (g a) (f b))
