server/src/editing/threading/snapshots/janet_zed_server__editing__threading__tests__unthread_first.snap
---
source: server/src/editing/threading/tests.rs
expression: (-> x| inc (f a))
---
----- BEFORE ACTION
(-> x inc (f a))
     ↑

----- AFTER ACTION: Unthread
(f (inc x) a)
