server/src/editing/threading/snapshots/janet_zed_server__editing__threading__tests__unthread_from_inside_a_step.snap
---
source: server/src/editing/threading/tests.rs
expression: (-> x (f |a))
---
----- BEFORE ACTION
(-> x (f a))
         ↑

----- AFTER ACTION: Unthread
(f x a)
