server/src/editing/threading/snapshots/janet_zed_server__editing__threading__tests__unthread_last.snap
---
source: server/src/editing/threading/tests.rs
expression: "|(->> items (map f) (reduce + 0))"
---
----- BEFORE ACTION
(->> items (map f) (reduce + 0))
↑

----- AFTER ACTION: Unthread
(reduce + 0 (map f items))
