server/src/editing/threading/snapshots/janet_zed_server__editing__threading__tests__unthread_the_inner_of_nested_macros.snap
---
source: server/src/editing/threading/tests.rs
expression: (-> x (->> |ys (map f)) g)
---
----- BEFORE ACTION
(-> x (->> ys (map f)) g)
           ↑

----- AFTER ACTION: Unthread
(-> x (map f ys) g)
